# 0.3.30

* Replace nomnom with argparse for CLI argument parsing. Usage should be the
  same, but unknown arguments will now cause an exit with failure rather than
  being ignored.

# 0.3.29

* Always use mc:Fallback when reading mc:AlternateContent elements.

# 0.3.28

* Avoid inserting newlines around inline elements when pretty-printing HTML.

* CLI: print warnings to stderr.

* Read v:imagedata with r:id attribute.

* Read children of v:roundrect.

* Ignore office-word:wrap, v:shadow and v:shapetype.

# 0.3.27

* Fix recursive collapsing of elements.

# 0.3.26

* Keep HTML elements open correctly when the HTML path contains no fresh
  element.

* Collapse similar non-fresh HTML elements together.

* Don't escape double quotes outside of attributes.

# 0.3.25

* When the styleMap option is passed as a string, ignore lines beginning with #.

* Generate warnings for not-understood style mappings and continue, rather than
  stopping with an error.
  
* Add support for embedded style maps.

* Add support for linked images.

# 0.3.24

* Ignore w:numPr elements without w:numId or w:ilvl children.

# 0.3.23

* Support links and images in footnotes and endnotes.

# 0.3.22

* Add support for underlines in style map.

* Add support for strikethrough.

# 0.3.21

* Add basic support for text boxes. The contents of the text box are treated as
  a separate paragraph that appears after the paragraph containing the text box.

# 0.3.20

* Support styles defined without a name

# 0.3.19

* Add ignoreEmptyParagraphs option, which defaults to true.

# 0.3.18

* Make style names case-insensitive in style mappings. This should make style
  mappings easier to write, especially since Microsoft Word sometimes represents
  style names in the UI differently from in the style definition. For instance,
  the style displayed in Word as "Heading 1" has  a style name of "heading 1".
  This hopefully shouldn't cause an issue for anyone, but if you were relying