@@ -6,8 +6,6 @@ var _ = require("underscore");
 
 var standardOptions = exports._standardOptions = {
     styleMap: [
-        "p[style-name='Normal'] => p:fresh",
-    
         "p.Heading1 => h1:fresh",
         "p.Heading2 => h2:fresh",
         "p.Heading3 => h3:fresh",
@@ -46,7 +44,10 @@ var standardOptions = exports._standardOptions = {
         "p:ordered-list(4) => ul|ol > li > ul|ol > li > ul|ol > li > ol > li:fresh",
         "p:ordered-list(5) => ul|ol > li > ul|ol > li > ul|ol > li > ul|ol > li > ol > li:fresh",
         
-        "r[style-name='Hyperlink'] =>"
+        "r[style-name='Hyperlink'] =>",
+        
+        "p[style-name='Normal'] => p:fresh"
+    
     ],
     transformDocument: identity,
     includeDefaultStyleMap: true
